--- a/index.html
+++ b/index.html
@@ -6,34 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Giorgi Tsereteli</title>
+    <title>Jijin KH</title>
 </head>
 <body>
     <div class="grid-2">
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
-            <h2>FirstName LastName</h2>
-            <p>City,Country.</p>
+            <h2>Jijin K Haridas</h2>
+            <p>Kerala, India.</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
+
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
+            <p>Hi. I am Jijin</p>
+
             <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem
+            <p>I am a CSE undergrad. I love to code, solve problems and be myself.</p>
 
             <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
+            <p>I can create APIs with django, flask, express and laravel.</p>
+            <p>Confident with DBMS like MySQL, SQLite, and PostgreSQL, and can also work with noSQL tools like mongoDB.</p>
+            <p>Knows just enough to make a conversation about React and Vue.</p>
+
             <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
-            <a href="#">Project 3</a>
-            <a href="#">Project 4</a>
-            <a href="#">Project 5</a>
+            <p>
+              Check out my github page
+              <a href="#"><i class="fab fa-github"></i></a>
+            </p>
+
             <h2>Contact</h2>
-            <p>myEmail@email.com</p>
+            <p>jijinkharidas10@gmail.com</p>
+
         </div>
     </div>
 </body>
