--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 
             <h2>About</h2>
             <p>Hi. I am Jijin</p>
-
-            <h2>Experience</h2>
-            <p>I am a CSE undergrad. I love to code, solve problems and be myself.</p>
+            <p>I am a CSE undergrad.</p> 
+            <p>I love to code, and solve problems.</p>
 
             <h2>Skills</h2>
             <p>I can create APIs with django, flask, express and laravel.</p>
