Update index.html | Updated social links

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
             <i class="fas fa-code fa-5x white"></i>
             <h2>Jijin K Haridas</h2>
             <p>Kerala, India.</p>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/jijinkh"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/jijinkh"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
 
@@ -33,7 +32,7 @@
             <h2>Projects</h2>
             <p>
               Check out my github page
-              <a href="#"><i class="fab fa-github"></i></a>
+              <a href="https://github.com/jijinkh"><i class="fab fa-github"></i></a>
             </p>
 
             <h2>Contact</h2>
